; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/exynos4-is/extr_fimc-lite.c_fimc_lite_clk_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/exynos4-is/extr_fimc-lite.c_fimc_lite_clk_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fimc_lite = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@FLITE_CLK_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fimc_lite*)* @fimc_lite_clk_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fimc_lite_clk_get(%struct.fimc_lite* %0) #0 {
  %2 = alloca %struct.fimc_lite*, align 8
  store %struct.fimc_lite* %0, %struct.fimc_lite** %2, align 8
  %3 = load %struct.fimc_lite*, %struct.fimc_lite** %2, align 8
  %4 = getelementptr inbounds %struct.fimc_lite, %struct.fimc_lite* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* @FLITE_CLK_NAME, align 4
  %8 = call i32 @clk_get(i32* %6, i32 %7)
  %9 = load %struct.fimc_lite*, %struct.fimc_lite** %2, align 8
  %10 = getelementptr inbounds %struct.fimc_lite, %struct.fimc_lite* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  %11 = load %struct.fimc_lite*, %struct.fimc_lite** %2, align 8
  %12 = getelementptr inbounds %struct.fimc_lite, %struct.fimc_lite* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @PTR_ERR_OR_ZERO(i32 %13)
  ret i32 %14
}

declare dso_local i32 @clk_get(i32*, i32) #1

declare dso_local i32 @PTR_ERR_OR_ZERO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
